# bdshare

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  HISTORY.md  LICENSE  README.md  comprehensive_test.py  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  python-package.yml
bdshare/: __init__.py  _version.py
bdshare/api/: api_data.py  client.py
bdshare/stock/: market.py  news.py  trading.py  vars.py
bdshare/util/: __init__.py  cache.py  cons.py  helper.py  proxy.py  session.py  store.py  tickers.json  tickers.py  upass.py  vars.py
demo/: Dockerfile  README.md  app.py  docker-compose.yml
demo/templates/: index.html
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/source/: conf.py  installation.rst
dshare/: __init__.py
dshare/stock/: trading.py
dshare/util/: netbase.py  vars.py
examples/: README.md  ex_flask.py  requirements.txt
examples/templates/: index.html
tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_dsex.py  test_latest_pe.py  test_market.py  test_mkt_depth.py  test_mkt_inf.py  test_news.py  test_random.py  test_trading.py
