[metadata]
name = bdshare
version = 0.4.0
author= Raisul Islam
author_email= raisul.me@gmail.com
description = A utility for crawling historical and Real-time Quotes of dse
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords= Crawling, DSE, CSE, Financial Data
license= MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    beautifulsoup4
    html5lib
    pandas
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.md, *.rst
    
