[metadata]
name = bdshare
version = 1.2.0
author= Raisul Islam
author_email= raisul.me@gmail.com
description = A utility for crawling historical and Real-time Quotes of DSE(Dhaka Stock Exchange)
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords= Crawling, DSE, Financial Data
license= MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    requests
    beautifulsoup4
    html5lib
    pandas
    lxml

[options.package_data]
* = *.md, *.rst
    
